--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -6,13 +6,14 @@
 // ************************************************************
 
 .cards-list {
-  @extend %flow;
   //scroll-snap-type: y mandatory;
   //scroll-padding: 5em;
   clear: both;
+
   padding: 0;
   // margin: 0;
   list-style-type: none;
+  @extend %flow;
 /*  &>* {
     --flow-space: var(--gap3);
   }*/
@@ -26,20 +27,22 @@
 .card {
   margin-bottom: var(--gap-m);
   @extend %clearfix;
-.card__subtitle{ --flow-space: var(--gap-xs);}
- .card__body{ --flow-space: var(--gap-s);}
   //* {
     // --flow-space: var(--gap-xs);
   ///}
   @extend %flow;
+.card__subtitle{ --flow-space: var(--gap-xs);}
+ .card__body{ --flow-space: var(--gap-s);}
 }
 
 .card__illustration {
-  margin-top: 0;
-  z-index: 1;
 position: relative;
+  z-index: 1;
+
+  margin-top: 0;
   @media (min-width: 30em) {
     float: right;
+
     max-width: 40%;
     margin: 0 0 var(--gap-m) var(--gap-m);
   }
@@ -47,26 +50,30 @@ position: relative;
 
 .card__illustration img,
 img.card__illustration {
+  padding: var(--border-width);
+
+  border-color: var(--color-primary-lighter-3);
   border-style: solid;
   border-width: var(--border-width);
-  border-color: var(--color-primary-lighter-3);
-  padding: var(--border-width);
 }
 
 .card__surtitle {
   margin-top: 0;
+
   color: var(--color-darkgrey);
 }
 .card__subtitle {
-  font-size: var(--font-size-l);
   margin-top: 0;
+
   color: var(--color-primary);
+  font-size: var(--font-size-l);
 }
 .card__title {
   // scroll-snap-align: none;
   margin-top: 0;
-  font-size: var(--font-size-xl);
+
   font-weight: bold;
+  font-size: var(--font-size-xl);
   letter-spacing: -0.02em;
 
   .card__surtitle + &,
@@ -76,16 +83,16 @@ img.card__illustration {
 }
 
 .card__body {
-  @extend %flow;
   
     font-size: var(--font-size-m);
+  @extend %flow;
 }
 
 // TODO: remove?
 .card.note {
   max-width: 45rem;
-  margin-left: auto;
   margin-right: auto;
+  margin-left: auto;
 }
 
 .publi,
@@ -96,73 +103,85 @@ img.card__illustration {
   //height: 100vh;
   //width: 100vw;
   position: relative;
-  margin-top: 0px;
+
+  margin-top: 0;
   padding: var(--skew-padding) 0;
 }
-.publi:before,
-.card-list__item:before,
-.titleDiag:before,
-.publi:after,
-.card-list__item:after,
-.titleDiag:after {
-  content: '';
+.publi::before,
+.card-list__item::before,
+.titleDiag::before,
+.publi::after,
+.card-list__item::after,
+.titleDiag::after {
   position: absolute;
-  left: 0;
   top: 0;
-  right: 0;
+  left: 0;
   bottom: 0;
+  right: 0;
+  content: '';
+  z-index: -1;
+
+  outline: 1px solid transparent;
+
   transform: skewy(var(--angle));
   transform-origin: 50% 0;
-  outline: 1px solid transparent;
   backface-visibility: hidden;
-  z-index: -1;
 }
 
 .publi,
 .card-list__item {
-  //z-index: 1;
-  //overflow-x: hidden;
-  // overflow-y: visible;
-  // overflow-y: hidden;  //box-shadow: 10px 5px 5px black;
-  & > * {
-    margin-top: var(--gap-m);
-     margin-bottom: var(--gap-m);
-    position: relative;
-  }
 
   @media (hover: hover) {
-    &:after {
+    &::after {
       box-shadow: 0 1px 2px var(--color-primary-darker-1),
         0 2px 4px var(--color-primary-darker-1),
         0 4px 8px var(--color-primary-darker-1),
         0 8px 16px var(--color-primary-darker-1),
         0 16px 32px var(--color-primary-darker-1);
+
       opacity: 0;
+
       transition: opacity 0.3s ease-in-out;
       transition: transform 0.3s ease-in-out;
     }
     &:hover {
-      &:after {
+      &::after {
+        z-index: 0;
+
+        opacity: 0.5;
+        transform: none;
+
         transition: opacity 0.3s ease-in-out;
         transition: transform 0.3s ease-in-out;
-        transform: none;
-        opacity: 0.5;
-        z-index: 0;
       }
-      &:before {
+      &::before {
         z-index: 0;
+
         transform: none;
+
         transition: transform 0.3s ease-in-out;
       }
       & > * {
         z-index: 1;
+
         transform: scale(1.025, 1.025);
+
         transition: transform 0.3s ease-in-out;
       }
     }
   }
+  //z-index: 1;
+  //overflow-x: hidden;
+  // overflow-y: visible;
+  // overflow-y: hidden;  //box-shadow: 10px 5px 5px black;
+  & > * {
+    position: relative;
+
+    margin-top: var(--gap-m);
+     margin-bottom: var(--gap-m);
+  }
   &:nth-child(2n + 1) {
-    &:before {
+    &::before {
       //  background: var(--color-primary-lighter-7)
     //  background: linear-gradient(260deg, var(--color-primary-lighter-7), var(--color-primary-lighter-8));
       background-color: var(--color-primary-lighter-7);
@@ -178,7 +197,7 @@ img.card__illustration {
     }
   }
   &:nth-child(2n + 2) {
-    &:before {
+    &::before {
      // background: linear-gradient(0deg, var(--color-primary-lighter-8), var(--color-primary-lighter-9));
       background-color: var(--color-primary-lighter-8);
     //  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
@@ -203,7 +222,8 @@ p + .meta {
 
 .sectionHeadList {
   margin-top: var(--gap-m);
-  margin-bottom: 0em;
-  text-align: center;
+  margin-bottom: 0;
+
   font-size: var(--font-size-xxxxl);
+  text-align: center;
 }
