--- a/assets/sass/components/_container.scss
+++ b/assets/sass/components/_container.scss
@@ -6,16 +6,18 @@
 .success,
 .warning,
 .error{
+  position: relative;
+
   clear: both;
+
   padding: var(--gap-m) ;
 
-  background-color: #ccc;
+  text-decoration: none;
 //  color: #222;
   border: var(--border-width) solid #999;
   border-radius: 0.3em;
 
-  text-decoration: none;
-  position: relative;
+  background-color: #ccc;
 
   &::before {
     position: absolute;
@@ -36,20 +38,25 @@
   & a:hover,
   & a:focus,
   & a:active {
-    color: var(--color-link-hover);;
+    color: var(--color-link-hover);
+    text-decoration: var(--color-link-hover-decoration);;
+
     background-color: var(--color-link-hover-bg);
-    text-decoration: var(--color-link-hover-decoration);
   }
 }
 
 .info {padding-left:  var(--gap-xl);
+
   color: var(--color-primary-darker-5);
-  background-color: var(--color-info-bg);
+
   border-color: #d6c6e9;
 
-  &::before {  
+  background-color: var(--color-info-bg);
+
+  &::before {
+    content: "ℹ️";  
+
     font-weight: bold;
-    content: "ℹ️";
   }
 
 /*  a:link,
@@ -61,8 +68,10 @@
 
 .success {
   color: #3c763d;
-  background-color: #dff0d8;
+
   border-color: #d6e9c6;
+
+  background-color: #dff0d8;
 
   &::before {
     content: url(/assets/icons/thumbs-up.svg);
@@ -77,8 +86,10 @@
 
 .warning {
   color: #8a6d3b;
-  background-color: #fcf8e3;
+
   border-color: #faebcc;
+
+  background-color: #fcf8e3;
 
   &::before {
     content: url(/assets/icons/alert.svg);
@@ -93,8 +104,10 @@
 
 .error {
   color: #a94442;
-  background-color: #f2dede;
+
   border-color: #ebccd1;
+
+  background-color: #f2dede;
 
   &::before {
     content: url(/assets/icons/meh.svg);
@@ -108,15 +121,19 @@
 }
 
 .citationW, .tableContent {
+--flow-space: var(--gap-xl);
+  position: relative;
 //  color: var(--color-primary-lighter-1);
   clear: both;
-  border-radius: 0.3em;
-  position: relative;
-  border: var(--border-width) dotted ;
---flow-space: var(--gap-xl);
+
   padding: var(--gap-xs) ;
-  background-color: var(--color-primary-lighter-8);
+
+  border: var(--border-width) dotted ;
   border-color:  var(--color-primary-lighter-5);
+  border-radius: 0.3em;
+
+  background-color: var(--color-primary-lighter-8);
+
   box-shadow: 0 1px 2px var(--soft-shadow), 
               0 2px 4px var(--soft-shadow), 
               0 4px 8px var(--soft-shadow),
@@ -129,23 +146,25 @@
 }
 .tableContent {
   --flow-space: var(--gap-xl);
+    padding-right: 0;
+      padding-left: 0;
+
   border-color: transparent;
-      padding-left: 0em;
-    padding-right: 0em;
  @media (min-width: 30rem) {
-    margin-left: calc(-1*var(--gap-m));
     margin-right: calc(-1*var(--gap-m));
-    padding-left: var(--gap-m);
+    margin-left: calc(-1*var(--gap-m));
     padding-right: var(--gap-m);
+    padding-left: var(--gap-m);
   }
 }
 .citationW {
-  background-color: var(--color-primary-lighter-7);
   border-color:  var(--color-primary-lighter-3);
 
+  background-color: var(--color-primary-lighter-7);
+
 & > * {@media (min-width: 30rem) {
-    padding-left: var(--gap-xl);
     padding-right: var(--gap-xl);
+    padding-left: var(--gap-xl);
   }
   }
 }
