--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -17,28 +17,31 @@
 .blurryHL {
   position: sticky;
   left: 0;
+  z-index: 1;
+
   width: min(100%, 100vw);
-  filter: blur(0.5em);
-  height:  var(--gap-l);
   width: 100%;
+  height:  var(--gap-l);
+  margin-top: 0;
+  margin-right: 0;
   // margin-left: -5%;
   margin-bottom:  calc(-1*var(--gap-l));
-  margin-top: 0;
-  z-index: 1;
-  background-color: var(--color-bg);
   // background-color: white;
   margin-left: 0;
-  margin-right: 0;
+
   border-color: transparent;
+
+  background-color: var(--color-bg);
+
+  filter: blur(0.5em);
   // color: transparent;
 }
 
 #footer {
   position: sticky;
   left: 0;
-  width: min(100%, 100vw);
 
-  white-space: nowrap;
+  width: min(100%, 100vw);
   margin: var(--gap-m) 0 0 0;
   padding:  var(--gap-m) 0;
   //z-index: -5;
@@ -51,6 +54,17 @@
   padding-top: calc((868 / (var(--footerW)) * 100vw));
   // transition color and padding if background image is added with JS
   color: currentColor;
+  white-space: nowrap;
+
+  background-image: var(--limbes),
+    linear-gradient(to bottom, #fff, #c5c5c5 50%, #282828 80%, #1a1a1a);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+
+  transform: scale(0);
+
+  animation-name: revealFooter;
 
   // animate opacity
   animation-duration: 1s;
@@ -58,13 +72,6 @@
   animation-delay: 0.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  animation-name: revealFooter;
-  transform: scale(0);
-  background-image: var(--limbes),
-    linear-gradient(to bottom, #ffffff, #c5c5c5 50%, #282828 80%, #1a1a1a);
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: cover;
   a {
     z-index: 0;
   }
@@ -76,8 +83,9 @@
   a:hover,
   &:focus,
   a:active {
-    background-color: #eb95cb;
     color: black;
+
+    background-color: #eb95cb;
   }
 
   .wrap {
@@ -86,8 +94,8 @@
     @media (min-width: 15em) {
       display: flex;
       flex-direction: row;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
 
     /*  & > *:first-child {
         flex: 1;
@@ -97,12 +105,12 @@
 
   p {
     color: white;
+    line-height: 1.5;
     small {
       color: white;
+
       background-color: rgba(23, 13, 29, 0.75);
     }
-
-    line-height: 1.5;
 
     & + p {
       text-align: right;
@@ -110,14 +118,17 @@
   }
 
   .edit {display: inline;
-    background-color: rgba(23, 13, 29, 0.75);
-    margin-bottom: var(--gap-xxs);
-    font-size: var(--font-size-xs);
-    white-space: normal;
-    line-height: 1.3;
-    text-align: center;
-    margin-left: auto;
+
     margin-right: auto;
+    margin-bottom: var(--gap-xxs);
+    margin-left: auto;
+
+    font-size: var(--font-size-xs);
+    line-height: 1.3;
+    white-space: normal;
+    text-align: center;
+
+    background-color: rgba(23, 13, 29, 0.75);
           //justify-content: center;
 
   }
