--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,44 +1,52 @@
 #header {
   position: sticky;
   left: 0;
+  z-index: 100;
+
   width: min(100%, 100vw);
-  white-space: nowrap;
-  font-size: var(--font-size-l);
   margin: 0 ;
   padding: 0;
   padding: var(--gap-5xs) 0;
-  z-index: 100;
+
   color: var(--color-link-hover);
+  font-size: var(--font-size-l);
+  white-space: nowrap;
+
+  border-top: solid var(--border-width) var(--color-primary-lighter-3);
+
   background: var(--color-primary);
   background: linear-gradient(
     var(--color-primary),
     var(--color-primary-lighter-1)
   );
-  border-top: solid var(--border-width) var(--color-primary-lighter-3);
+
   overflow: hidden;
   .wrap {
     //@media (min-width: 15em) {
       display: flex;
       flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
     //  flex-wrap: wrap;
       flex-wrap: nowrap;
-    overflow-x: hidden;
+      justify-content: space-between;
+      align-items: center;
+
     text-overflow: "";
+
+    overflow-x: hidden;
     //}
   }
 
   .site_title {
+    margin: 0;
+    padding: var(--gap-3xs) 0;
+
+    color: var(--color-link-hover);
     font-weight: bold;
     font-size: 1em;
     line-height: 1.3;
     letter-spacing: -0.02em;
-text-align: center;
-    margin: 0;
-    padding: var(--gap-3xs) 0;
     white-space: normal;
-    color: var(--color-link-hover);
+text-align: center;
   /*  @media (min-width: 24em) {
       font-size: 1em;
     }*/
@@ -48,13 +56,15 @@ text-align: center;
   }
 
   .elsewhere {
-    margin: 0;
-    margin-left: auto;
-    padding: 0;
-    list-style-type: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+
+    margin: 0;
+    margin-left: auto;
+    padding: 0;
+
+    list-style-type: none;
     .svgfill {
       fill: var(--color-primary-lighter-5);
       stroke-width: 0;
@@ -66,10 +76,12 @@ text-align: center;
     a:link,
     a:visited {
       display: inline-block;
-      padding-left: calc(var(--gap-xxs) + 0vw);
+
       padding-right: calc(var(--gap-xxs) + 0vw);
-      text-decoration: none;
+      padding-left: calc(var(--gap-xxs) + 0vw);
+
       white-space: nowrap;
+      text-decoration: none;
     }
     a:hover,
     a:focus {
@@ -91,8 +103,10 @@ text-align: center;
   a:hover,
   a:focus {
     color: var(--color-link-hover);
-    background-color: transparent;
     text-decoration: underline;
+
+    background-color: transparent;
+
     mix-blend-mode: normal;
   }
 }
@@ -103,10 +117,12 @@ text-align: center;
 }*/
 
 .elsewhere > * {
-  text-align: center;
-  margin: 0em var(--gap-3xs);
- margin-bottom: var(--gap-5xs);
   flex: 15%;
+
+  margin: 0 var(--gap-3xs);
+ margin-bottom: var(--gap-5xs);
+
+  text-align: center;
   @media (min-width: 32em) {
     flex: var(--gap-m);
   }
