--- a/assets/sass/components/_page.scss
+++ b/assets/sass/components/_page.scss
@@ -21,12 +21,13 @@
 }
 .page__subtitle {
   --flow-space: var(--gap-xs);
+  margin-top: 0;
+
   color: var(--color-primary);
   font-size: var(--font-size-xxl);
   font-style: italic;
-  margin-top: 0;
   & + * {
-    --flow-space: 0em;
+    --flow-space: 0;
   }
 }
 
@@ -35,6 +36,7 @@
 
   @media (min-width: 40em) {
     float: right;
+
     max-width: 40%;
     margin: 0 0 var(--gap-m) var(--gap-m);
   }
@@ -44,16 +46,18 @@
 img.page__illustration,
 .page__illustration2 img,
 img.page__illustration2 {
-  border-width: var(--border-width);
-  border-style: solid;
-  border-color: var(--color-primary-lighter-3);
   padding: var(--border-width);
+
+  border-color: var(--color-primary-lighter-3);
+  border-style: solid;
+  border-width: var(--border-width);
 }
 img.page__illustration2 {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+
   max-width: calc(min(max(66%, 30em), 100%));
+  margin-right: auto;
+  margin-left: auto;
 }
 /*
 .page__body {
