--- a/assets/sass/global/_print.scss
+++ b/assets/sass/global/_print.scss
@@ -37,7 +37,7 @@
     page-break-before: avoid;
   }
 
-  a[href^='http']:after {
+  a[href^='http']::after {
     content: ' &lt; ' attr(href) '&gt; ';
   }
 }
