--- a/assets/sass/page-about.scss
+++ b/assets/sass/page-about.scss
@@ -6,113 +6,133 @@ ul.snake {
   padding: 0;
 }
 
-.snake li:after {
+.snake li::after {
   content: '';
+
   display: block;
   clear: both;
 }
 
 .snake li:not(.nosnake) {
-  list-style: none;
+
+  position: relative;
+
+  margin: 0;
+  padding: var(--gap-xl);
+  padding-right: var(--gap-l);
+  padding-left: var(--gap-l);
+
+  border-width: 3px;
   border-top: 3px solid;
   // border-image: linear-gradient(to right, #743ad5 0%, #d53a9d 100%);
   border-image: linear-gradient(to right, #eb95cb 0%, #691449 100%);
   border-image-slice: 1;
-  border-width: 3px;
-  margin: 0;
-  padding: var(--gap-xl);
-  padding-left: var(--gap-l);
-  padding-right: var(--gap-l);
-  @media (min-width: 40rem) {
-    padding-left: var(--gap-xl);
-    padding-right: var(--gap-xl);
-  }
 
-  position: relative;
+  list-style: none;
+  @media (min-width: 40rem) {
+    padding-right: var(--gap-xl);
+    padding-left: var(--gap-xl);
+  }
   // color: black;
 
   //numbers
-  &:before {
-    content: attr(data-date);
+  &::before {
     position: absolute;
-    border-radius: 50%;
-    padding: 0em;
-    height: var(--gap-l);
-    width: var(--gap-xxl);
-    background-color: var(--color-primary-darker-4);
-    text-align: center;
-    color: var(--color-primary-lighter-8);
+    content: attr(data-date);
     z-index: 1;
+
+    width: var(--gap-xxl);
+    height: var(--gap-l);
+    padding: 0;
+
+    color: var(--color-primary-lighter-8);
+    text-align: center;
+
+    border-radius: 50%;
+
+    background-color: var(--color-primary-darker-4);
   }
 }
 //odd number borders
 
 .snake li:not(.nosnake):nth-child(odd) {
-  border-right: 3px solid;
   padding-left: 0;
+
+  border-right: 3px solid;
 border-left: 0;
-  &:before {
+  &::before {
     top: 100%;
     // margin-left: -0.7em;
     left: 25%;
+
     margin-top: calc(-1*var(--gap-s));
   }
 }
 //even number borders
 .snake li:not(.nosnake):nth-child(even) {
-  border-left: 3px solid;
   padding-right: 0;
+
 border-right: 0;
-  &:before {
+  border-left: 3px solid;
+  &::before {
     top: 100%;
     left: 65%;
+
     margin-top: calc(-1*var(--gap-s));
   }
 }
 //handle first and last
 .snake li:not(.nosnake):first-child {
-  border-top: 0;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
   padding-top: 0;
-  &:after {
-    content: ' ';
+
+  border-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  &::after {
     position: absolute;
-    border-radius: 0%;
-    height: var(--gap-s);
-    width: var(--gap-s);
-    background-color: #691449;
-    margin-left: calc(-0.4*var(--gap-s));
-    z-index: 1;
     top: 0%;
     left: 100%;
+    content: ' ';
+    z-index: 1;
+
+    width: var(--gap-s);
+    height: var(--gap-s);
+    margin-left: calc(-0.4*var(--gap-s));
+
+    border-radius: 0%;
+
+    background-color: #691449;
+
     transform: rotate(45deg);
   }
 }
 
 .horizontalFlex{
-  font-size: var(--font-size-l);
-      list-style: none;
       display: inline-flex;
       flex-direction: row;
-      align-items: center;
      // justify-content: space-evenly;
       flex-wrap: wrap;
-        padding: 0;
-        padding-inline-start: 0;
+     gap : var(--gap-m);
+      align-items: center;
+
       margin-top: 0; 
       margin-bottom: 0;
       margin-left: var(--gap-l);
-     gap : var(--gap-m); 
+        padding: 0;
+
+  font-size: var(--font-size-l);
+
+      list-style: none;
+        padding-inline-start: 0; 
      li{--flow-space: 0;}
       a{padding-bottom: var(--gap-3xs);}
 }
 
 .snake li:not(.nosnake):last-child {
-  &:before {
-    left: 0%;
-  }
+  border-bottom: 3px solid;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  border-bottom: 3px solid;
+  &::before {
+    left: 0%;
+  }
 }
