--- a/assets/sass/page-tagscloud.scss
+++ b/assets/sass/page-tagscloud.scss
@@ -24,44 +24,52 @@
 }
 
 .tagscloud__tags {
-  list-style-type: none;
-  padding: 0;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-evenly;
+  align-items: center;
+
+  padding: 0;
+
+  list-style-type: none;
 }
-.tag0 {
-  line-height: 1;
-  transition: all 0.2s;
-  border-radius: 10% 50%/30% 10%;;
+.tag0 {;
   padding-top: var(--gap-4xs);
+  padding-right: var(--gap-xs);
   padding-bottom: var(--gap-3xs);
   padding-left: var(--gap-xs);
-  padding-right: var(--gap-xs);
-  //  border: 1px solid transparent;
-  &:link,
-  &:visited {
-    display: inline-block;
-    margin: var(--gap-3xs) var(--gap-4xs);
 
-    hyphens: auto;
-    text-decoration: none;
-    white-space: break-spaces;
-  }
+  line-height: 1;
+
+  border-radius: 10% 50%/30% 10%;
+
+  transition: all 0.2s;
   @media (hover: hover) {
     &:hover,
     &:focus,
     &:active {
       // border-color: var(--color-primary-darker-5);
       color: var(--color-link-hover);
+
       transform: scale(1.1, 1.1);
     }
   }
-  &:after {
-    white-space: nowrap;
+  //  border: 1px solid transparent;
+  &:link,
+  &:visited {
+    display: inline-block;
+
+    margin: var(--gap-3xs) var(--gap-4xs);
+
+    white-space: break-spaces;
+    text-decoration: none;
+    hyphens: auto;
+  }
+  &::after {
     content: ' (' attr(data-number) ')';
+
     font-size: 1rem;
+    white-space: nowrap;
   }
 }
 .tag1 {
@@ -72,6 +80,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary-darker-5);
   }
 }
@@ -83,6 +92,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary-darker-4);
   }
 }
@@ -94,6 +104,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary-darker-3);
   }
 }
@@ -105,6 +116,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary-darker-2);
   }
 }
@@ -116,6 +128,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary-darker-1);
   }
 }
@@ -127,6 +140,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary);
   }
 }
@@ -138,6 +152,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary-lighter-1);
   }
 }
@@ -149,6 +164,7 @@
   &:hover,
   &:focus {
     color: var(--color-link-hover);
+
     background-color: var(--color-primary-lighter-2);
   }
 }
